fixed issue of exit button hiding behind images

--- a/src/components/FindAGame/FindAGame.css
+++ b/src/components/FindAGame/FindAGame.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: end;
     position: sticky;
+    z-index: 1000;
     top: 0;
 }
 
